@@ -89,6 +89,12 @@ API Changes
   In Lucene 4.0, SimilarityProvider will allow you to customize scoring
   using external norms, too.  (Uwe Schindler, Robert Muir)
 
+* LUCENE-3735: PayloadProcessorProvider was changed to return a
+  ReaderPayloadProcessor instead of DirPayloadProcessor. The selction
+  of the provider to return for the factory is now based on the IndexReader
+  to be merged. To mimic the old behaviour, just use IndexReader.directory()
+  for choosing the provider by Directory.  (Uwe Schindler)
+
 New Features
 
 * LUCENE-3593: Added a FieldValueFilter that accepts all documents that either
